# OOP_Task5

./: Animal.cpp  Animal.h  Birds.cpp  Birds.h  CMakeLists.txt  Fish.cpp  Fish.h  Flamingo.cpp  Flamingo.h  GoldFish.cpp  GoldFish.h  Horse.cpp  Horse.h  MainTrain.cpp  Mammals.cpp  Mammals.h  MammalsFish.cpp  MammalsFish.h  Mermaid.cpp  Mermaid.h  README.md  Zoo.cpp  Zoo.h
