cmake_minimum_required(VERSION 3.22)
project(assignment)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(assignment
        Zoo.h
        Zoo.cpp
        Mermaid.h
        Mammals.cpp
        MammalsFish.cpp
        Horse.cpp
        Horse.h
        Fish.h
        GoldFish.cpp
        MammalsFish.h
        Mammals.h
        GoldFish.h
        Mermaid.cpp
        Fish.cpp
        Flamingo.cpp
        MainTrain.cpp
        Flamingo.h
        Birds.h
        Birds.cpp
        Animal.cpp
        Animal.h)